--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@antfu/eslint-config": "^0.38.5",
     "@nuxt/content": "^2.6.0",
     "@types/node": "^18.16.1",
+    "@unocss/nuxt": "^0.51.8",
     "eslint": "^8.39.0",
     "nuxt": "^3.4.2",
     "typescript": "^5.0.4"
