--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node": ">=16",
     "pnpm": ">=8"
   },
+  "packageManager": "pnpm@8.3.0",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
