--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.5",
     "@nuxt/content": "^2.6.0",
+    "@nuxt/devtools": "^0.4.5",
     "@types/node": "^18.16.3",
     "@unocss/nuxt": "^0.51.8",
     "eslint": "^8.39.0",
