chore: update renovete

--- a/renovate.json
+++ b/renovate.json
@@ -17,6 +17,7 @@
     ],
     "packageRules": [
         {
+            "groupName": "root",
             "matchFiles": [
                 "package.json"
             ],
