--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@iconify-json/ph": "^1.1.5",
     "@nuxt/content": "^2.6.0",
     "@nuxt/devtools": "^0.4.6",
+    "@nuxthq/studio": "^0.12.1",
     "@nuxtjs/plausible": "^0.2.1",
     "@types/node": "^18.16.6",
     "@unocss/nuxt": "^0.51.12",
