--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@nuxtjs/plausible": "^0.2.1",
     "@types/node": "^18.16.6",
     "@unocss/nuxt": "^0.51.12",
+    "@vueuse/core": "^10.1.2",
+    "@vueuse/nuxt": "^10.1.2",
     "eslint": "8.39.0",
     "nuxt": "^3.4.3",
     "typescript": "^5.0.4"
