--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "@nuxt/content": "^2.6.0",
     "@nuxt/devtools": "^0.4.6",
     "@nuxthq/studio": "^0.12.1",
+    "@nuxthq/ui": "^2.0.4",
     "@nuxtjs/plausible": "^0.2.1",
     "@types/node": "^18.16.6",
     "@unocss/nuxt": "^0.51.12",
+    "@vueuse/core": "^10.1.2",
+    "@vueuse/nuxt": "^10.1.2",
     "eslint": "8.39.0",
     "nuxt": "^3.4.3",
     "typescript": "^5.0.4"
