--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "funding": "https://github.com/sponsors/productdevbook",
   "engines": {
     "node": ">=16",
-    "pnpm": ">=8"
+    "pnpm": ">=8.0.0"
   },
-  "packageManager": "pnpm@8.3.0",
+  "packageManager": "pnpm@8.0.0",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -44,10 +44,11 @@
     "@vueuse/core": "^10.1.2",
     "@vueuse/nuxt": "^10.1.2",
     "eslint": "8.39.0",
-    "nuxt": "^3.5.1",
+    "nuxt": "^3.5.2",
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@oku-ui/checkbox": "^0.1.4",
     "@oku-ui/label": "^0.1.0"
   }
 }
