--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "nuxi build",
     "generate": "nuxi generate",
     "preview": "nuxi preview",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "fix": "eslint --fix .",
+    "docs:contributors": "esno scripts/update-contributors.ts",
+    "prefetch": "esno scripts/fetch-avatars.ts"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.7",
@@ -17,11 +20,13 @@
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxthq/ui": "^2.5.0",
     "@nuxtjs/plausible": "^0.2.1",
+    "@types/fs-extra": "^11.0.1",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^20.4.2",
     "@vueuse/core": "^10.2.1",
     "@vueuse/nuxt": "^10.2.1",
     "eslint": "^8.44.0",
+    "fs-extra": "^11.1.1",
     "nuxt": "^3.6.2",
     "typescript": "^5.1.6"
   },
@@ -40,6 +45,7 @@
     "@oku-ui/progress": "^0.1.0",
     "@oku-ui/separator": "^0.1.2",
     "@oku-ui/toggle": "^0.1.0",
+    "@tailwindcss/typography": "^0.5.9",
     "lodash-es": "^4.17.21"
   }
 }
