--- a/olddocs/.github/workflows/ci.yml
+++ b/olddocs/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ concurrency:
 
 permissions:
   pull-requests: write
-  
+
 on:
   push:
     branches:
@@ -32,15 +32,15 @@ jobs:
       - run: corepack enable
       - uses: actions/setup-node@v3
         with:
-          node-version: "18"
+          node-version: '18'
           cache: pnpm
-            
+
       - name: 📦 Install deps (with cache)
         run: pnpm install
 
       - name: 👀 Lint
         run: pnpm lint
-        
+
       - name: 🚀 Build
         run: pnpm build
 
@@ -49,7 +49,7 @@ jobs:
 
       # - name: 🧪 Test with coverage
       #   run: pnpm coverage
-      
+
       # - name: 📝 Upload coverage
       #   if: always()
       #   uses: davelosert/vitest-coverage-report-action@v1
