--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "@oku-ui/separator": "^0.2.0-beta.1",
     "@oku-ui/toggle": "^0.2.0-beta.1",
     "@tailwindcss/typography": "^0.5.9",
-    "lodash-es": "^4.17.21",
-    "v-plausible": "^1.0.2"
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.7",
@@ -35,7 +34,6 @@
     "@nuxt/devtools": "^0.6.7",
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxthq/ui": "^2.5.0",
-    "@nuxtjs/plausible": "^0.2.1",
     "@types/fs-extra": "^11.0.1",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^20.4.2",
@@ -44,7 +42,8 @@
     "eslint": "^8.44.0",
     "fs-extra": "^11.1.1",
     "nuxt": "^3.6.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "v-plausible": "^1.0.2"
   },
   "pnpm": {
     "overrides": {
