--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "@iconify-json/heroicons": "^1.1.12",
     "@iconify-json/ph": "^1.1.6",
     "@nuxthq/studio": "^0.13.4",
-    "@oku-ui/aspect-ratio": "^0.2.3",
-    "@oku-ui/avatar": "^0.2.3",
-    "@oku-ui/checkbox": "^0.2.3",
-    "@oku-ui/collapsible": "^0.2.4",
-    "@oku-ui/label": "^0.2.3",
-    "@oku-ui/progress": "^0.2.3",
-    "@oku-ui/separator": "^0.2.3",
-    "@oku-ui/toggle": "^0.2.3",
+    "@oku-ui/aspect-ratio": "^0.4.0-alpha.0",
+    "@oku-ui/avatar": "^0.4.0-alpha.0",
+    "@oku-ui/checkbox": "^0.4.0-alpha.0",
+    "@oku-ui/collapsible": "^0.4.0-alpha.0",
+    "@oku-ui/label": "^0.4.0-alpha.0",
+    "@oku-ui/progress": "^0.4.0-alpha.0",
+    "@oku-ui/separator": "^0.4.0-alpha.0",
+    "@oku-ui/toggle": "^0.4.0-alpha.0",
     "@tailwindcss/typography": "^0.5.9",
     "lodash-es": "^4.17.21"
   },
