--- a/package.json
+++ b/package.json
@@ -16,16 +16,28 @@
   "dependencies": {
     "@iconify-json/fa-brands": "^1.1.4",
     "@iconify-json/heroicons": "^1.1.11",
+    "@iconify-json/ic": "^1.1.14",
     "@iconify-json/ph": "^1.1.5",
     "@nuxthq/studio": "^0.13.4",
-    "@oku-ui/aspect-ratio": "^0.2.3",
-    "@oku-ui/avatar": "^0.2.3",
-    "@oku-ui/checkbox": "^0.2.3",
-    "@oku-ui/collapsible": "^0.2.4",
-    "@oku-ui/label": "^0.2.3",
-    "@oku-ui/progress": "^0.2.3",
-    "@oku-ui/separator": "^0.2.3",
-    "@oku-ui/toggle": "^0.2.3",
+    "@nuxtjs/fontaine": "^0.4.1",
+    "@nuxtjs/google-fonts": "^3.0.2",
+    "@nuxtseo/module": "2.0.0-beta.15",
+    "@oku-ui/aspect-ratio": "^0.4.0-alpha.4",
+    "@oku-ui/avatar": "^0.4.0-alpha.4",
+    "@oku-ui/checkbox": "^0.4.0-alpha.4",
+    "@oku-ui/collapsible": "^0.4.0-alpha.4",
+    "@oku-ui/label": "^0.4.0-alpha.4",
+    "@oku-ui/popover": "^0.4.0-alpha.4",
+    "@oku-ui/progress": "^0.4.0-alpha.4",
+    "@oku-ui/radio-group": "^0.4.0-alpha.4",
+    "@oku-ui/separator": "^0.4.0-alpha.4",
+    "@oku-ui/slider": "^0.4.0-alpha.4",
+    "@oku-ui/switch": "^0.4.0-alpha.4",
+    "@oku-ui/tabs": "^0.4.0-alpha.4",
+    "@oku-ui/toggle": "^0.4.0-alpha.4",
+    "@oku-ui/toggle-group": "^0.4.0-alpha.4",
+    "@oku-ui/toolbar": "^0.4.0-alpha.4",
+    "@oku-ui/tooltip": "^0.4.0-alpha.4",
     "@tailwindcss/typography": "^0.5.9",
     "lodash-es": "^4.17.21"
   },
@@ -36,6 +48,7 @@
     "@nuxt/devtools": "^0.7.3",
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxthq/ui": "^2.7.0",
+    "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/fs-extra": "^11.0.1",
     "@types/lodash-es": "^4.17.8",
     "@types/node": "^20.4.5",
