--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@oku-ui/toggle-group": "^0.4.0-alpha.11",
     "@oku-ui/toolbar": "^0.4.0-alpha.11",
     "@oku-ui/tooltip": "^0.4.0-alpha.11",
+    "@radix-ui/colors": "^2.1.0",
     "@tailwindcss/typography": "^0.5.9",
     "lodash-es": "^4.17.21"
   },
