--- a/package.json
+++ b/package.json
@@ -22,25 +22,25 @@
     "@nuxtjs/fontaine": "^0.4.1",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtseo/module": "2.0.0-beta.15",
-    "@oku-ui/aspect-ratio": "^0.4.0-alpha.13",
-    "@oku-ui/avatar": "^0.4.0-alpha.13",
-    "@oku-ui/checkbox": "^0.4.0-alpha.13",
-    "@oku-ui/collapsible": "^0.4.0-alpha.13",
-    "@oku-ui/dialog": "^0.4.0-alpha.13",
-    "@oku-ui/hover-card": "^0.4.0-alpha.13",
-    "@oku-ui/label": "^0.4.0-alpha.13",
-    "@oku-ui/popover": "^0.4.0-alpha.13",
-    "@oku-ui/progress": "^0.4.0-alpha.13",
-    "@oku-ui/radio-group": "^0.4.0-alpha.13",
-    "@oku-ui/separator": "^0.4.0-alpha.13",
-    "@oku-ui/slider": "^0.4.0-alpha.13",
-    "@oku-ui/switch": "^0.4.0-alpha.13",
-    "@oku-ui/tabs": "^0.4.0-alpha.13",
-    "@oku-ui/toast": "^0.4.0-alpha.13",
-    "@oku-ui/toggle": "^0.4.0-alpha.13",
-    "@oku-ui/toggle-group": "^0.4.0-alpha.14",
-    "@oku-ui/toolbar": "^0.4.0-alpha.13",
-    "@oku-ui/tooltip": "^0.4.0-alpha.13",
+    "@oku-ui/aspect-ratio": "^0.4.0",
+    "@oku-ui/avatar": "^0.4.0",
+    "@oku-ui/checkbox": "^0.4.0",
+    "@oku-ui/collapsible": "^0.4.0",
+    "@oku-ui/dialog": "^0.4.0",
+    "@oku-ui/hover-card": "^0.4.0",
+    "@oku-ui/label": "^0.4.0",
+    "@oku-ui/popover": "^0.4.0",
+    "@oku-ui/progress": "^0.4.0",
+    "@oku-ui/radio-group": "^0.4.0",
+    "@oku-ui/separator": "^0.4.0",
+    "@oku-ui/slider": "^0.4.0",
+    "@oku-ui/switch": "^0.4.0",
+    "@oku-ui/tabs": "^0.4.0",
+    "@oku-ui/toast": "^0.4.0",
+    "@oku-ui/toggle": "^0.4.0",
+    "@oku-ui/toggle-group": "^0.4.0",
+    "@oku-ui/toolbar": "^0.4.0",
+    "@oku-ui/tooltip": "^0.4.0",
     "@pinia/nuxt": "^0.4.11",
     "@radix-ui/colors": "^2.1.0",
     "@tailwindcss/typography": "^0.5.9",
