--- a/newdesign/package.json
+++ b/newdesign/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/fontaine": "^0.4.1",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtlabs/github-module": "^1.6.3",
+    "@oku-ui/primitives-nuxt": "^0.1.5",
     "@radix-ui/colors": "3.0.0-rc.4",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
@@ -23,5 +24,9 @@
     "nuxt": "^3.7.3",
     "nuxt-og-image": "^2.0.28",
     "sass": "^1.68.0"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.4.11",
+    "pinia": "^2.1.6"
   }
 }
