--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@iconify-json/twemoji": "latest",
     "@nuxt/content": "^2.8.2",
     "@nuxt/devtools": "^0.8.4",
-    "@nuxt/ui-pro": "npm:@nuxt/ui-pro-edge@0.0.1-28255017.af7c0a2",
+    "@nuxt/ui-pro": "npm:@nuxt/ui-pro-edge@latest",
     "@nuxtjs/fontaine": "^0.4.1",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtlabs/github-module": "^1.6.3",
