--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "oku-docs",
-  "version": "1.0.0",
+  "version": "0.2.0",
   "private": true,
+  "packageManager": "pnpm@8.7.6",
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
@@ -32,7 +33,8 @@
     "nuxt": "^3.7.3",
     "nuxt-og-image": "^2.0.28",
     "sass": "^1.68.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "v-plausible": "^1.1.1"
   },
   "dependencies": {
     "@oku-ui/primitives": "^0.4.0",
