--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "build": "nuxt build",
     "preview": "nuxt preview",
     "generate": "nuxt generate",
-    "preinstall": "nuxt prepare"
+    "preinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "fix": "eslint --fix ."
+  },
+  "dependencies": {
+    "@oku-ui/primitives": "^0.4.0",
+    "@pinia/nuxt": "^0.4.11",
+    "pinia": "^2.1.6"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.43.1",
     "@egoist/tailwindcss-icons": "^1.2.0",
     "@iconify-json/fa-brands": "^1.1.5",
     "@iconify-json/heroicons": "latest",
@@ -29,17 +37,13 @@
     "@radix-ui/colors": "3.0.0-rc.4",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
+    "eslint": "^8.50.0",
     "lodash-es": "^4.17.21",
     "nuxt": "^3.7.3",
     "nuxt-og-image": "^2.0.28",
     "sass": "^1.68.0",
     "typescript": "^5.2.2",
     "v-plausible": "^1.1.1"
-  },
-  "dependencies": {
-    "@oku-ui/primitives": "^0.4.0",
-    "@pinia/nuxt": "^0.4.11",
-    "pinia": "^2.1.6"
   },
   "resolutions": {
     "h3": "^1.8.1",
