--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,8 @@ jobs:
 
       - name: 🚀 Build
         run: pnpm build
+        env:
+          NUXT_UI_PRO_TOKEN: ${{ secrets.NUXT_UI_PRO_TOKEN }}
 
       # - name: 🧪 Test
       #   run: pnpm test
