--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.3.0",
   "private": true,
   "packageManager": "pnpm@8.7.6",
+  "type": "module",
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
@@ -41,7 +42,8 @@
     "@radix-ui/colors": "3.0.0-rc.5",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
-    "eslint": "^8.50.0",
+    "eslint": "8.0.0",
+    "eslint-plugin-antfu": "1.0.0-beta.6",
     "lodash-es": "^4.17.21",
     "nuxt": "^3.7.4",
     "nuxt-og-image": "^2.0.28",
