--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "oku-docs",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "packageManager": "pnpm@8.7.6",
+  "type": "module",
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
@@ -15,12 +16,14 @@
     "prefetch": "esno scripts/fetch-avatars.ts"
   },
   "dependencies": {
-    "@oku-ui/primitives": "^0.4.0",
+    "@oku-ui/primitives": "^0.5.0",
     "@pinia/nuxt": "^0.4.11",
-    "pinia": "^2.1.6"
+    "mdast-util-to-string": "^4.0.0",
+    "pinia": "^2.1.6",
+    "unist-util-stringify-position": "^4.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.43.1",
+    "@antfu/eslint-config": "1.0.0-beta.10",
     "@egoist/tailwindcss-icons": "^1.2.0",
     "@iconify-json/fa-brands": "^1.1.5",
     "@iconify-json/heroicons": "latest",
@@ -30,18 +33,19 @@
     "@iconify-json/solar": "latest",
     "@iconify-json/twemoji": "latest",
     "@nuxt/content": "^2.8.2",
-    "@nuxt/devtools": "^0.8.4",
+    "@nuxt/devtools": "^0.8.5",
     "@nuxt/ui-pro": "npm:@nuxt/ui-pro-edge@latest",
     "@nuxtjs/fontaine": "^0.4.1",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtlabs/github-module": "^1.6.3",
-    "@oku-ui/primitives-nuxt": "^0.1.5",
-    "@radix-ui/colors": "3.0.0-rc.4",
+    "@oku-ui/primitives-nuxt": "^0.2.0",
+    "@radix-ui/colors": "3.0.0-rc.5",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
-    "eslint": "^8.50.0",
+    "eslint": "8.0.0",
+    "eslint-plugin-antfu": "1.0.0-beta.6",
     "lodash-es": "^4.17.21",
-    "nuxt": "^3.7.3",
+    "nuxt": "^3.7.4",
     "nuxt-og-image": "^2.0.28",
     "sass": "^1.68.0",
     "typescript": "^5.2.2",
