--- a/package.json
+++ b/package.json
@@ -23,33 +23,33 @@
     "unist-util-stringify-position": "^4.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "1.0.0-beta.10",
-    "@egoist/tailwindcss-icons": "^1.2.0",
+    "@antfu/eslint-config": "1.0.0-beta.18",
+    "@egoist/tailwindcss-icons": "^1.3.3",
     "@iconify-json/fa-brands": "^1.1.5",
     "@iconify-json/heroicons": "latest",
     "@iconify-json/ic": "^1.1.14",
     "@iconify-json/ph": "latest",
-    "@iconify-json/simple-icons": "latest",
-    "@iconify-json/solar": "latest",
+    "@iconify-json/simple-icons": "^1.1.73",
+    "@iconify-json/solar": "^1.1.5",
     "@iconify-json/twemoji": "latest",
-    "@nuxt/content": "^2.8.2",
-    "@nuxt/devtools": "^0.8.5",
+    "@nuxt/content": "^2.8.5",
+    "@nuxt/devtools": "1.0.0-beta.0",
     "@nuxt/ui-pro": "npm:@nuxt/ui-pro-edge@latest",
     "@nuxtjs/fontaine": "^0.4.1",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtlabs/github-module": "^1.6.3",
     "@oku-ui/primitives-nuxt": "^0.2.0",
-    "@radix-ui/colors": "3.0.0-rc.5",
+    "@radix-ui/colors": "3.0.0",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
-    "eslint": "8.0.0",
-    "eslint-plugin-antfu": "1.0.0-beta.6",
+    "eslint": "8.50.0",
+    "eslint-plugin-antfu": "1.0.0-beta.10",
     "lodash-es": "^4.17.21",
     "nuxt": "^3.7.4",
     "nuxt-og-image": "^2.0.28",
     "sass": "^1.68.0",
     "typescript": "^5.2.2",
-    "v-plausible": "^1.1.1"
+    "v-plausible": "^1.2.0"
   },
   "resolutions": {
     "h3": "^1.8.1",
