chore: update docs

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@iconify-json/fa-brands": "^1.1.5",
     "@iconify-json/heroicons": "latest",
     "@iconify-json/ic": "^1.1.14",
+    "@iconify-json/logos": "^1.1.37",
     "@iconify-json/ph": "latest",
     "@iconify-json/simple-icons": "^1.1.73",
     "@iconify-json/solar": "^1.1.5",
