--- a/package.json
+++ b/package.json
@@ -17,41 +17,41 @@
   },
   "dependencies": {
     "@oku-ui/primitives": "^0.5.0",
-    "@pinia/nuxt": "^0.4.11",
+    "@pinia/nuxt": "^0.5.1",
     "mdast-util-to-string": "^4.0.0",
-    "pinia": "^2.1.6",
+    "pinia": "^2.1.7",
     "unist-util-stringify-position": "^4.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "1.0.0-beta.21",
-    "@egoist/tailwindcss-icons": "^1.3.3",
+    "@antfu/eslint-config": "2.1.0",
+    "@egoist/tailwindcss-icons": "^1.4.0",
     "@iconify-json/fa-brands": "^1.1.5",
-    "@iconify-json/heroicons": "latest",
+    "@iconify-json/heroicons": "^1.1.13",
     "@iconify-json/ic": "^1.1.14",
-    "@iconify-json/logos": "^1.1.37",
+    "@iconify-json/logos": "^1.1.38",
     "@iconify-json/ph": "latest",
-    "@iconify-json/simple-icons": "^1.1.73",
-    "@iconify-json/solar": "^1.1.5",
+    "@iconify-json/simple-icons": "^1.1.79",
+    "@iconify-json/solar": "^1.1.6",
     "@iconify-json/twemoji": "latest",
-    "@nuxt/content": "^2.8.5",
-    "@nuxt/devtools": "1.0.0-beta.0",
+    "@nuxt/content": "^2.9.0",
+    "@nuxt/devtools": "1.0.3",
     "@nuxt/ui-pro": "npm:@nuxt/ui-pro-edge@latest",
     "@nuxtjs/fontaine": "^0.4.1",
-    "@nuxtjs/google-fonts": "^3.0.2",
+    "@nuxtjs/google-fonts": "^3.1.0",
     "@nuxtlabs/github-module": "^1.6.3",
-    "@oku-ui/primitives-nuxt": "^0.2.0",
+    "@oku-ui/primitives-nuxt": "^0.2.2",
     "@radix-ui/colors": "3.0.0",
-    "@vueuse/core": "^10.4.1",
-    "@vueuse/nuxt": "^10.4.1",
-    "eslint": "8.50.0",
-    "eslint-plugin-antfu": "1.0.0-beta.10",
-    "lint-staged": "^14.0.1",
+    "@vueuse/core": "^10.6.1",
+    "@vueuse/nuxt": "^10.6.1",
+    "eslint": "8.54.0",
+    "eslint-plugin-antfu": "1.0.11",
+    "lint-staged": "^15.1.0",
     "lodash-es": "^4.17.21",
-    "nuxt": "^3.7.4",
-    "nuxt-og-image": "^2.0.28",
-    "sass": "^1.69.0",
+    "nuxt": "^3.8.2",
+    "nuxt-og-image": "^2.2.4",
+    "sass": "^1.69.5",
     "simple-git-hooks": "^2.9.0",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.2",
     "v-plausible": "^1.2.0"
   },
   "resolutions": {
