--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "lint-staged": "^15.1.0",
     "lodash-es": "^4.17.21",
     "nuxt": "^3.8.2",
-    "nuxt-og-image": "^2.2.4",
+    "nuxt-og-image": "3.0.0-beta.37",
     "sass": "^1.69.5",
     "simple-git-hooks": "^2.9.0",
     "typescript": "^5.3.2",
