--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "unist-util-stringify-position": "^4.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "2.1.0",
+    "@antfu/eslint-config": "2.3.4",
     "@egoist/tailwindcss-icons": "^1.4.0",
     "@iconify-json/fa-brands": "^1.1.5",
     "@iconify-json/heroicons": "^1.1.13",
@@ -34,8 +34,8 @@
     "@iconify-json/solar": "^1.1.6",
     "@iconify-json/twemoji": "latest",
     "@nuxt/content": "^2.9.0",
-    "@nuxt/devtools": "1.0.3",
-    "@nuxt/ui-pro": "npm:@nuxt/ui-pro-edge@latest",
+    "@nuxt/devtools": "1.0.4",
+    "@nuxt/ui-pro": "^0.5.0",
     "@nuxtjs/fontaine": "^0.4.1",
     "@nuxtjs/google-fonts": "^3.1.0",
     "@nuxtlabs/github-module": "^1.6.3",
@@ -43,8 +43,8 @@
     "@radix-ui/colors": "3.0.0",
     "@vueuse/core": "^10.6.1",
     "@vueuse/nuxt": "^10.6.1",
-    "eslint": "8.54.0",
-    "eslint-plugin-antfu": "1.0.11",
+    "eslint": "8.55.0",
+    "eslint-plugin-antfu": "2.0.0",
     "lint-staged": "^15.1.0",
     "lodash-es": "^4.17.21",
     "nuxt": "^3.8.2",
@@ -53,10 +53,6 @@
     "simple-git-hooks": "^2.9.0",
     "typescript": "^5.3.2",
     "v-plausible": "^1.2.0"
-  },
-  "resolutions": {
-    "h3": "^1.8.1",
-    "vue": "^3.3.4"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
