--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
   "devDependencies": {
     "@antfu/eslint-config": "2.3.4",
     "@egoist/tailwindcss-icons": "^1.4.0",
-    "@iconify-json/fa-brands": "^1.1.5",
-    "@iconify-json/heroicons": "^1.1.13",
-    "@iconify-json/ic": "^1.1.14",
-    "@iconify-json/logos": "^1.1.38",
+    "@iconify-json/fa-brands": "latest",
+    "@iconify-json/game-icons": "latest",
+    "@iconify-json/heroicons": "latest",
+    "@iconify-json/ic": "latest",
+    "@iconify-json/logos": "latest",
     "@iconify-json/ph": "latest",
-    "@iconify-json/simple-icons": "^1.1.79",
-    "@iconify-json/solar": "^1.1.6",
+    "@iconify-json/simple-icons": "latest",
+    "@iconify-json/solar": "latest",
     "@iconify-json/twemoji": "latest",
     "@nuxt/content": "^2.9.0",
     "@nuxt/devtools": "1.0.4",
