--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "devDependencies": {
     "@0b5vr/tweakpane-plugin-rotation": "^0.2.0",
     "@antfu/eslint-config": "2.3.4",
-    "@egoist/tailwindcss-icons": "^1.4.0",
+    "@egoist/tailwindcss-icons": "^1.7.4",
     "@iconify-json/fa-brands": "latest",
     "@iconify-json/game-icons": "latest",
     "@iconify-json/heroicons": "latest",
@@ -35,34 +35,38 @@
     "@iconify-json/simple-icons": "latest",
     "@iconify-json/solar": "latest",
     "@iconify-json/twemoji": "latest",
-    "@nuxt/content": "^2.9.0",
+    "@nuxt/content": "^2.12.1",
     "@nuxt/devtools": "1.0.4",
-    "@nuxt/ui": "^2.11.1",
+    "@nuxt/ui": "^2.15.0",
     "@nuxt/ui-pro": "^0.5.0",
     "@nuxtjs/fontaine": "^0.4.1",
-    "@nuxtjs/google-fonts": "^3.1.0",
+    "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtlabs/github-module": "^1.6.3",
-    "@oku-ui/motion-nuxt": "^0.2.0",
+    "@oku-ui/motion-nuxt": "^0.2.1",
     "@oku-ui/primitives-nuxt": "^0.3.0",
     "@radix-ui/colors": "3.0.0",
     "@tweakpane/core": "^2.0.3",
     "@tweakpane/plugin-essentials": "^0.2.1",
-    "@vueuse/core": "^10.6.1",
-    "@vueuse/nuxt": "^10.6.1",
+    "@types/node": "^20.11.30",
+    "@vueuse/core": "^10.9.0",
+    "@vueuse/nuxt": "^10.9.0",
     "eslint": "8.55.0",
     "eslint-plugin-antfu": "2.0.0",
-    "lint-staged": "^15.1.0",
+    "lint-staged": "^15.2.2",
     "lodash-es": "^4.17.21",
-    "nuxt": "^3.8.2",
+    "nuxt": "^3.11.1",
     "nuxt-og-image": "3.0.0-beta.37",
-    "sass": "^1.69.5",
-    "simple-git-hooks": "^2.9.0",
+    "sass": "^1.72.0",
+    "simple-git-hooks": "^2.11.1",
     "tweakpane": "^4.0.3",
-    "typescript": "^5.3.2",
+    "typescript": "^5.4.3",
     "v-plausible": "^1.2.0"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
+  },
+  "resolutions": {
+    "mdast-util-gfm-table": "2.0.0"
   },
   "lint-staged": {
     "*": "pnpm eslint . --fix"
