--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -20,5 +20,5 @@ jobs:
       - run: pnpm install
 
       - name: Fix lint issues
-        run: npm run fix
+        run: npm run lint:fix
       - uses: autofix-ci/action@8caa572fd27b0019a65e4c695447089c8d3138b9
